--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -36,7 +36,7 @@
     
     <%= render "public/shared/navbar" %>
 
-    <div class="m-0 p-0 public-content">
+    <div class="m-0 public-content">
       <div id="flash" data-turbo-temporary>
         <%= render partial: "public/shared/flash" %>
       </div>
