--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,18 +1,18 @@
 <nav class="navbar navbar-expand-xxl bg-black shadow-sm fixed-top py-3">
   <div class="container-fluid ps-2 pe-3 align-items-center justify-content-between">
     <div class="d-flex align-items-center gap-2">
-      <%= link_to image_tag('/images/a1soirlogo2.png', class: 'mb-0 px-2', width: "350", alt: "Logo"), root_url %>
+      <%= link_to root_url do %>
+        <%= image_tag('/images/a1soirlogo2.png', class: 'mb-0 px-2 navbar-logo', alt: "Logo") %>
+      <% end %>
 
       <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form",
-          class: "btn btn-sm btn-light px-3 ms-4 me-2 d-inline-flex align-items-center btn-rdv-hover public-btn-border-radius" do %>
+          class: "btn btn-sm btn-light px-3 ms-4 me-2 d-none d-xxl-flex align-items-center btn-rdv-hover public-btn-border-radius" do %>
         <i class="bi bi-calendar-check me-2"></i>
         <span class="fw-bold text-uppercase small">Prendre rendez-vous</span>
       <% end %>
     </div>
 
     <div class="d-flex align-items-center gap-3 order-xl-2 ms-auto">
-      <%= render partial: "public/shared/cart_nav_link" %>
-
       <button class="navbar-toggler border-0 p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <i class="bi bi-list text-light" style="font-size: 1.75rem;"></i>
       </button>
@@ -20,12 +20,22 @@
 
     <div class="collapse navbar-collapse order-xl-1" id="navbar">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <!-- Bouton RDV dans le menu mobile -->
+        <li class="nav-item text-center my-3 d-xxl-none">
+          <%= link_to "#{rdv_url(subdomain: "shop")}#rdv-form",
+              class: "btn btn-light px-4 py-2 d-inline-flex align-items-center justify-content-center btn-rdv-hover public-btn-border-radius" do %>
+            <i class="bi bi-calendar-check me-2"></i>
+            <span class="fw-bold text-uppercase small">Prendre rendez-vous</span>
+          <% end %>
+        </li>
+        
         <%= nav_link_public(home_path, "Accueil") %>
         <%= nav_link_public(la_boutique_url, "Boutique") %>
         <%= nav_link_public(nos_collections_url, "Collections") %>
         <%= render "public/shared/cabine_nav_link", badge_count: session[:cabine_cart]&.size %>
         <%= nav_link_public(le_concept_url, "Concept") %>
         <%= nav_link_public(nos_autres_activites_url, "Autres activités") %>
+        <%= render partial: "public/shared/cart_nav_link" %>
         <%#= nav_link_public(legal_url, "Légal") %>
         <%#= nav_link_public(faq_url, "FAQ") %>
       </ul>
